<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ret="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/fieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <com.kemallette.RichEditText.Widget.RichEditTextField
            android:id="@+id/editTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".95"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:minLines="10" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".05"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/clear_text_"
            android:scaleType="fitStart"
            android:src="@android:drawable/ic_delete" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/formattingOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldLayout" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="B"
                    android:textOn="B"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="I"
                    android:textOn="I"
                    android:textStyle="normal" />

                <ToggleButton
                    android:id="@+id/underline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="U"
                    android:textOn="U"
                    android:textStyle="normal" />

                <ToggleButton
                    android:id="@+id/strikethrough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:textOff="Strike"
                    android:textOn="Strike"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscript"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/sup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/superscript"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/bgColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/bgColor"
                    android:textOn="@string/bgColor"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/bgColorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/color_wheel"
                    android:text="@string/bgColor" />

                <ToggleButton
                    android:id="@+id/fgColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/fgColor"
                    android:textOn="@string/fgColor"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/fgColorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:drawableTop="@drawable/color_wheel"
                    android:text="@string/fgColor" />

                <ToggleButton
                    android:id="@+id/bullet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Bullet"
                    android:textOn="Bullet"
                    android:textStyle="normal" />

                <ToggleButton
                    android:id="@+id/ordered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="OL"
                    android:textOn="OL"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/alignLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Left"
                    android:textOn="Normal" />

                <ToggleButton
                    android:id="@+id/alignCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="Center"
                    android:textOn="Center" />

                <ToggleButton
                    android:id="@+id/alignOpposite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:textOff="Opposite"
                    android:textOn="Opposite" />

                <Button
                    android:id="@+id/smile1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":-)" />

                <Button
                    android:id="@+id/smile2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":-(" />

                <Button
                    android:id="@+id/smile3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":-D" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />

                <ToggleButton
                    android:id="@+id/test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Test" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>